fix(code review comments fixed)