@@ -1,19 +1,18 @@
 package com.equities.service;
 
 import com.equities.model.Position;
+import com.equities.model.ProcessingState;
 import com.equities.model.Transaction;
 import com.equities.repository.PositionRepository;
+import com.equities.repository.ProcessingStateRepository;
 import com.equities.repository.TransactionRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
@@ -24,19 +23,16 @@ public class PositionCalculationService {
 
     private final TransactionRepository transactionRepository;
     private final PositionRepository positionRepository;
+    private final ProcessingStateRepository processingStateRepository;
 
     @Transactional
     public List<Position> processTransaction(Transaction transaction) {
-        log.info("Processing transaction: ID={}, Trade={}, Version={}, Security={}, Qty={}, Action={}, Side={}", 
-                transaction.getTransactionId(), 
-                transaction.getTradeId(), 
-                transaction.getVersion(), 
-                transaction.getSecurityCode(), 
-                transaction.getQuantity(), 
-                transaction.getAction(), 
-                transaction.getSide());
+        log.info("Processing transaction: Trade={}, Security={}, Qty={}", 
+                transaction.getTradeId(), transaction.getSecurityCode(), transaction.getQuantity());
 
-        if (transactionRepository.existsByTransactionId(transaction.getTransactionId())) {
+        // For new transactions, transactionId will be null and will be auto-generated
+        if (transaction.getTransactionId() != null && transactionRepository.existsByTransactionId(transaction.getTransactionId())) {
+            // Update existing transaction
             Transaction existing = transactionRepository.findByTransactionId(transaction.getTransactionId()).orElseThrow();
             existing.setTradeId(transaction.getTradeId());
             existing.setVersion(transaction.getVersion());
@@ -46,41 +42,31 @@ public class PositionCalculationService {
             existing.setSide(transaction.getSide());
             transactionRepository.save(existing);
         } else {
+            // Create new transaction (transactionId will be auto-generated)
+            if (transaction.getTransactionId() == null) {
+                transaction.setTransactionId(generateNextTransactionId());
+            }
             transactionRepository.save(transaction);
         }
 
-        return recalculateAllPositions();
-    }
-
-    @Transactional
-    @Async
-    public CompletableFuture<List<Position>> processBulkTransactionsAsync(List<Transaction> transactions) {
-        log.info("Processing {} transactions asynchronously", transactions.size());
-        
-        List<Position> result = processBulkTransactions(transactions);
-        return CompletableFuture.completedFuture(result);
+        return recalculatePositionsDelta();
     }
 
     @Transactional
     public List<Position> processBulkTransactions(List<Transaction> transactions) {
         log.info("Processing {} transactions in bulk", transactions.size());
         
-        for (Transaction transaction : transactions) {
-            log.debug("Processing transaction: ID={}, Trade={}, Version={}, Security={}, Qty={}, Action={}, Side={}", 
-                    transaction.getTransactionId(), 
-                    transaction.getTradeId(), 
-                    transaction.getVersion(), 
-                    transaction.getSecurityCode(), 
-                    transaction.getQuantity(), 
-                    transaction.getAction(), 
-                    transaction.getSide());
-            
-            transactionRepository.save(transaction);
-            log.debug("Saved transaction ID {}", transaction.getTransactionId());
+        // Generate transaction IDs for new transactions
+        Long currentMaxId = transactionRepository.findMaxTransactionId().orElse(0L);
+        for (int i = 0; i < transactions.size(); i++) {
+            Transaction transaction = transactions.get(i);
+            if (transaction.getTransactionId() == null) {
+                transaction.setTransactionId(currentMaxId + i + 1);
+            }
         }
         
-        log.info("All transactions saved, recalculating positions...");
-        return recalculateAllPositions();
+        transactionRepository.saveAll(transactions);
+        return recalculatePositionsDelta();
     }
 
     public List<Position> getAllPositions() {
@@ -93,73 +79,200 @@ public class PositionCalculationService {
 
     @Transactional
     public void clearAllData() {
-        log.info("Clearing all data");
         positionRepository.deleteAll();
         transactionRepository.deleteAll();
+        processingStateRepository.deleteAll();
+    }
+
+    @Transactional
+    public List<Position> forceFullRecalculation() {
+        return recalculateAllPositions();
+    }
+
+    public ProcessingState getProcessingState() {
+        return processingStateRepository.findByStateKey("POSITION_CALCULATION")
+                .orElse(ProcessingState.builder()
+                        .stateKey("POSITION_CALCULATION")
+                        .lastProcessedTransactionId(0L)
+                        .lastProcessedTimestamp(LocalDateTime.now())
+                        .build());
     }
 
     @Transactional
     public List<Position> loadSampleData() {
-        log.info("Loading sample data...");
-        
-        log.info("Clearing all existing data...");
-        positionRepository.deleteAll();
-        transactionRepository.deleteAll();
-        log.info("All existing data cleared");
+        clearAllData();
         
         List<Transaction> sampleTransactions = List.of(
-                Transaction.builder().transactionId(1L).tradeId(1L).version(1).securityCode("REL").quantity(50).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.BUY).build(),
-                Transaction.builder().transactionId(2L).tradeId(2L).version(1).securityCode("ITC").quantity(40).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.SELL).build(),
-                Transaction.builder().transactionId(3L).tradeId(3L).version(1).securityCode("INF").quantity(70).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.BUY).build(),
-                Transaction.builder().transactionId(4L).tradeId(1L).version(2).securityCode("REL").quantity(60).action(Transaction.TransactionAction.UPDATE).side(Transaction.TransactionSide.BUY).build(),
-                Transaction.builder().transactionId(5L).tradeId(2L).version(2).securityCode("ITC").quantity(30).action(Transaction.TransactionAction.CANCEL).side(Transaction.TransactionSide.BUY).build(),
-                Transaction.builder().transactionId(6L).tradeId(4L).version(1).securityCode("INF").quantity(20).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.SELL).build()
+                Transaction.builder().tradeId(1L).version(1).securityCode("REL").quantity(50).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.BUY).build(),
+                Transaction.builder().tradeId(2L).version(1).securityCode("ITC").quantity(40).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.SELL).build(),
+                Transaction.builder().tradeId(3L).version(1).securityCode("INF").quantity(70).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.BUY).build(),
+                Transaction.builder().tradeId(1L).version(2).securityCode("REL").quantity(60).action(Transaction.TransactionAction.UPDATE).side(Transaction.TransactionSide.BUY).build(),
+                Transaction.builder().tradeId(2L).version(2).securityCode("ITC").quantity(30).action(Transaction.TransactionAction.CANCEL).side(Transaction.TransactionSide.BUY).build(),
+                Transaction.builder().tradeId(4L).version(1).securityCode("INF").quantity(20).action(Transaction.TransactionAction.INSERT).side(Transaction.TransactionSide.SELL).build()
         );
 
-        log.info("Processing {} sample transactions", sampleTransactions.size());
-        List<Position> result = processBulkTransactions(sampleTransactions);
-        log.info("Sample data loaded, resulting in {} positions", result.size());
-        return result;
+        return processBulkTransactions(sampleTransactions);
+    }
+
+    private List<Position> recalculatePositionsDelta() {
+        Long lastProcessedId = getLastProcessedTransactionId();
+        List<Transaction> newTransactions = transactionRepository.findTransactionsAfterId(lastProcessedId);
+        
+        if (newTransactions.isEmpty()) {
+            return getAllPositions();
+        }
+        
+        // Get affected securities from new transactions
+        Set<String> affectedSecurities = new HashSet<>();
+        for (Transaction tx : newTransactions) {
+            affectedSecurities.add(tx.getSecurityCode());
+        }
+        
+        // Get current positions and reset affected securities
+        Map<String, Integer> currentPositions = getAllPositions().stream()
+                .collect(Collectors.toMap(Position::getSecurityCode, Position::getQuantity));
+        
+        for (String securityCode : affectedSecurities) {
+            currentPositions.put(securityCode, 0);
+        }
+        
+        // Get only trades that affect the affected securities
+        List<Long> relevantTradeIds = transactionRepository.findTradeIdsBySecurityCodes(new ArrayList<>(affectedSecurities));
+        
+        // Get all transactions for relevant trades in one query
+        List<Transaction> relevantTransactions = transactionRepository.findTransactionsByTradeIds(relevantTradeIds);
+        
+        // Group transactions by trade ID and process each trade
+        Map<Long, List<Transaction>> transactionsByTrade = relevantTransactions.stream()
+                .collect(Collectors.groupingBy(Transaction::getTradeId));
+        
+        for (List<Transaction> tradeTransactions : transactionsByTrade.values()) {
+            processTradeForPositions(tradeTransactions, currentPositions);
+        }
+        
+        updatePositionsInDatabase(currentPositions);
+        updateLastProcessedTransactionId(newTransactions);
+        
+        return getAllPositions();
+    }
+
+    private Long getLastProcessedTransactionId() {
+        return processingStateRepository.findByStateKey("POSITION_CALCULATION")
+                .map(ProcessingState::getLastProcessedTransactionId)
+                .orElse(0L);
+    }
+
+    private void updateLastProcessedTransactionId(List<Transaction> newTransactions) {
+        Long maxNewTransactionId = newTransactions.stream()
+                .mapToLong(Transaction::getTransactionId)
+                .max()
+                .orElse(0L);
+        
+        Long currentLastProcessedId = getLastProcessedTransactionId();
+        Long newLastProcessedId = Math.max(currentLastProcessedId, maxNewTransactionId);
+        
+        ProcessingState state = processingStateRepository.findByStateKey("POSITION_CALCULATION")
+                .orElse(ProcessingState.builder()
+                        .stateKey("POSITION_CALCULATION")
+                        .lastProcessedTransactionId(0L)
+                        .lastProcessedTimestamp(LocalDateTime.now())
+                        .build());
+        
+        state.setLastProcessedTransactionId(newLastProcessedId);
+        state.setLastProcessedTimestamp(LocalDateTime.now());
+        processingStateRepository.save(state);
+    }
+
+    private Long generateNextTransactionId() {
+        Long maxTransactionId = transactionRepository.findMaxTransactionId().orElse(0L);
+        return maxTransactionId + 1;
+    }
+
+    private void updatePositionsInDatabase(Map<String, Integer> positionMap) {
+        List<Position> existingPositions = positionRepository.findAll();
+        Map<String, Position> existingPositionMap = existingPositions.stream()
+                .collect(Collectors.toMap(Position::getSecurityCode, p -> p));
+        
+        // Update or create positions
+        for (Map.Entry<String, Integer> entry : positionMap.entrySet()) {
+            String securityCode = entry.getKey();
+            Integer quantity = entry.getValue();
+            
+            Position existingPosition = existingPositionMap.get(securityCode);
+            
+            if (existingPosition != null) {
+                existingPosition.setQuantity(quantity);
+                positionRepository.save(existingPosition);
+            } else {
+                Position newPosition = Position.builder()
+                        .securityCode(securityCode)
+                        .quantity(quantity)
+                        .build();
+                positionRepository.save(newPosition);
+            }
+        }
+        
+        // Remove positions with zero quantity
+        for (Position existingPosition : existingPositions) {
+            if (!positionMap.containsKey(existingPosition.getSecurityCode()) || 
+                positionMap.get(existingPosition.getSecurityCode()) == 0) {
+                positionRepository.delete(existingPosition);
+            }
+        }
     }
 
     private List<Position> recalculateAllPositions() {
-        log.info("Recalculating all positions");
-        
-        List<Long> tradeIds = transactionRepository.findAllTradeIds();
-        log.info("Found {} trade IDs: {}", tradeIds.size(), tradeIds);
-        
+        // Get all transactions in one query, ordered by trade ID and version
+        List<Transaction> allTransactions = transactionRepository.findAllByOrderByTradeIdAscVersionAsc();
         Map<String, Integer> positionMap = new ConcurrentHashMap<>();
         
-        for (Long tradeId : tradeIds) {
-            List<Transaction> tradeTransactions = transactionRepository.findByTradeIdOrderByVersionAsc(tradeId);
-            log.debug("Trade {} has {} transactions", tradeId, tradeTransactions.size());
+        // Group transactions by trade ID and process each trade
+        Map<Long, List<Transaction>> transactionsByTrade = allTransactions.stream()
+                .collect(Collectors.groupingBy(Transaction::getTradeId));
+        
+        for (List<Transaction> tradeTransactions : transactionsByTrade.values()) {
             processTradeForPositions(tradeTransactions, positionMap);
         }
-        
-        log.info("Final position map: {}", positionMap);
         
         List<Position> positions = positionMap.entrySet().stream()
                 .map(entry -> Position.builder()
                         .securityCode(entry.getKey())
                         .quantity(entry.getValue())
                         .build())
-                .sorted((p1, p2) -> p1.getSecurityCode().compareTo(p2.getSecurityCode()))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(Position::getSecurityCode))
+                .toList();
         
         try {
-            positionRepository.deleteAll();
+            List<Position> existingPositions = positionRepository.findAll();
+            Map<String, Position> existingPositionMap = existingPositions.stream()
+                    .collect(Collectors.toMap(Position::getSecurityCode, p -> p));
             
             List<Position> savedPositions = new ArrayList<>();
+            
             for (Position position : positions) {
-                Position savedPosition = positionRepository.save(position);
+                Position existingPosition = existingPositionMap.get(position.getSecurityCode());
+                Position savedPosition;
+                
+                if (existingPosition != null) {
+                    existingPosition.setQuantity(position.getQuantity());
+                    savedPosition = positionRepository.save(existingPosition);
+                } else {
+                    savedPosition = positionRepository.save(position);
+                }
                 savedPositions.add(savedPosition);
-                log.debug("Saved position: {} = {}", position.getSecurityCode(), position.getQuantity());
             }
             
-            log.info("Recalculated {} positions: {}", savedPositions.size(), 
-                    savedPositions.stream()
-                            .map(p -> p.getSecurityCode() + ":" + p.getQuantity())
-                            .collect(Collectors.joining(", ")));
+            for (Position existingPosition : existingPositions) {
+                if (!positionMap.containsKey(existingPosition.getSecurityCode()) || 
+                    positionMap.get(existingPosition.getSecurityCode()) == 0) {
+                    positionRepository.delete(existingPosition);
+                }
+            }
+            
+            // Update processing state for full recalculation
+            List<Transaction> allTransactionsForState = transactionRepository.findAll();
+            updateLastProcessedTransactionId(allTransactionsForState);
+            
             return savedPositions;
             
         } catch (Exception e) {
@@ -174,32 +287,25 @@ public class PositionCalculationService {
         }
         
         Long tradeId = transactions.get(0).getTradeId();
-        log.debug("Processing trade {} with {} transactions", tradeId, transactions.size());
         
         boolean isCancelled = transactions.stream()
                 .anyMatch(tx -> tx.getAction() == Transaction.TransactionAction.CANCEL);
         
         if (isCancelled) {
             Transaction latestTransaction = transactions.stream()
-                    .max((t1, t2) -> Integer.compare(t1.getVersion(), t2.getVersion()))
+                    .max(Comparator.comparingInt(Transaction::getVersion))
                     .orElse(null);
-            
-            if (latestTransaction != null) {
-                String securityCode = latestTransaction.getSecurityCode();
-                positionMap.put(securityCode, 0);
-                log.debug("Trade {} is cancelled, setting {} position to 0", tradeId, securityCode);
-            } else {
-                log.warn("No latest transaction found for cancelled trade {}", tradeId);
-            }
+
+            String securityCode = latestTransaction.getSecurityCode();
+            positionMap.put(securityCode, 0);
             return;
         }
         
         Transaction latestTransaction = transactions.stream()
-                .max((t1, t2) -> Integer.compare(t1.getVersion(), t2.getVersion()))
+                .max(Comparator.comparingInt(Transaction::getVersion))
                 .orElse(null);
         
         if (latestTransaction == null) {
-            log.warn("No latest transaction found for trade {}", tradeId);
             return;
         }
         
@@ -207,17 +313,6 @@ public class PositionCalculationService {
         int quantity = latestTransaction.getQuantity();
         int impact = latestTransaction.getSide() == Transaction.TransactionSide.BUY ? quantity : -quantity;
         
-        int previousValue = positionMap.getOrDefault(securityCode, 0);
         positionMap.merge(securityCode, impact, Integer::sum);
-        int newValue = positionMap.get(securityCode);
-        
-        log.debug("Trade {}: {} {} {} = impact {} ({} -> {})", 
-                tradeId, 
-                securityCode, 
-                latestTransaction.getSide(), 
-                quantity, 
-                impact,
-                previousValue,
-                newValue);
     }
 } 
